# Architecture_Project_2024

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
common/: CMakeLists.txt  binary.cpp  binaryio.hpp  image_types.hpp  progargs.cpp  progargs.hpp  test_progargs.cpp
imgaos/: CMakeLists.txt  imageaos.hpp
imgsoa/: CMakeLists.txt  imagesoa.hpp
utest-common/: CMakeLists.txt  readppm_test.cpp  test_progargs.cpp  writecppm_test.cpp  writeppm_test.cpp
